Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-11345

Compile english error messages into mysqld executable.

Details

    Description

      Currently, server startup requires message directory to be set and file to be found. It would greatly increase usability, if server was independent on the message file. We could compile English messages into the executable itself instead. Apart from usability improvement, and slightly reduced startup time, this would help with other tasks. xtrabackup for example, should do plugin loading like the server does, and would reuse server functionality. However any attempt to write error message from plugin_init() when it is called from xtrabackup, would crash if message file is not loaded. I'd like to avoid introducing additional -lc_messages_dir or similar parameters for xtrabackup,(not its core functionality)

      Attachments

        Issue Links

          Activity

            This is currently worked around in xtrabackup, but I would appreciate if I did not have no manually allocate memory for messages, and hardcode couple of the messages I might come across, because they are used by the sql_plugin.cc or by encryption plugins themselves,

            wlad Vladislav Vaintroub added a comment - This is currently worked around in xtrabackup, but I would appreciate if I did not have no manually allocate memory for messages, and hardcode couple of the messages I might come across, because they are used by the sql_plugin.cc or by encryption plugins themselves,

            People

              wlad Vladislav Vaintroub
              wlad Vladislav Vaintroub
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.