MDEV-11345 Compile english error messages into mysqld executable.

Simplify loading messages into mariabackup. Do the same as server does
We're forcing english, so there is no attempt to load errmsg.sys